--- a/MentalCrosswind/Base.lproj/Main.storyboard
+++ b/MentalCrosswind/Base.lproj/Main.storyboard
@@ -290,17 +290,6 @@
                                     <action selector="doneButton:" destination="48t-C8-Sn9" eventType="touchUpInside" id="D9u-e9-O5A"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="24" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="unlessEditing" translatesAutoresizingMaskIntoConstraints="NO" id="AUr-9q-8Vf">
-                                <rect key="frame" x="159" y="77" width="69" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
-                            </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Default Runway" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YSB-By-zM5">
-                                <rect key="frame" x="20" y="83" width="119" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Dsr-86-0Ew">
                                 <rect key="frame" x="20" y="211" width="374" height="32"/>
                                 <segments>
@@ -329,34 +318,51 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" spellCheckingType="no" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Starting Mode" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dfj-h8-XEc">
+                                <rect key="frame" x="20" y="84" width="108" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="cUm-Hy-rml">
+                                <rect key="frame" x="20" y="113" width="374" height="32"/>
+                                <segments>
+                                    <segment title="Practice"/>
+                                    <segment title="Analysis"/>
+                                    <segment title="Last"/>
+                                </segments>
+                                <connections>
+                                    <action selector="startingModeSegmentChanged:" destination="48t-C8-Sn9" eventType="valueChanged" id="OY0-2v-dhZ"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Yvr-nw-uUe"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="AUr-9q-8Vf" firstAttribute="leading" secondItem="YSB-By-zM5" secondAttribute="trailing" constant="20" id="08z-br-Nko"/>
                             <constraint firstItem="FI3-9p-zXZ" firstAttribute="leading" secondItem="Dsr-86-0Ew" secondAttribute="leading" id="37r-Dc-oMb"/>
+                            <constraint firstItem="cUm-Hy-rml" firstAttribute="leading" secondItem="Dfj-h8-XEc" secondAttribute="leading" id="3Uf-pV-MZl"/>
+                            <constraint firstItem="Yvr-nw-uUe" firstAttribute="trailing" secondItem="cUm-Hy-rml" secondAttribute="trailing" constant="20" id="3sE-ew-5dY"/>
                             <constraint firstItem="Dsr-86-0Ew" firstAttribute="top" secondItem="FI3-9p-zXZ" secondAttribute="bottom" constant="8" symbolic="YES" id="4wI-9C-xvs"/>
-                            <constraint firstItem="FI3-9p-zXZ" firstAttribute="top" secondItem="YSB-By-zM5" secondAttribute="bottom" constant="76" id="65i-Yk-sug"/>
                             <constraint firstItem="9C5-hg-9Z1" firstAttribute="top" secondItem="Dsr-86-0Ew" secondAttribute="bottom" constant="15" id="ADR-zv-uc3"/>
+                            <constraint firstItem="FI3-9p-zXZ" firstAttribute="top" secondItem="cUm-Hy-rml" secondAttribute="bottom" constant="36" id="Ezm-aN-UGa"/>
                             <constraint firstItem="Yvr-nw-uUe" firstAttribute="trailing" secondItem="fc8-AX-Yjx" secondAttribute="trailing" constant="10" id="IPq-pC-Saz"/>
                             <constraint firstItem="Dsr-86-0Ew" firstAttribute="top" secondItem="FI3-9p-zXZ" secondAttribute="bottom" constant="10" id="J8h-fS-Mgy"/>
-                            <constraint firstItem="FI3-9p-zXZ" firstAttribute="leading" secondItem="YSB-By-zM5" secondAttribute="leading" id="KqT-h9-twi"/>
                             <constraint firstItem="van-p3-s4a" firstAttribute="firstBaseline" secondItem="9C5-hg-9Z1" secondAttribute="firstBaseline" id="Rkx-Ne-d8P"/>
-                            <constraint firstItem="AUr-9q-8Vf" firstAttribute="firstBaseline" secondItem="YSB-By-zM5" secondAttribute="firstBaseline" id="Ubf-rl-AZg"/>
                             <constraint firstItem="van-p3-s4a" firstAttribute="leading" secondItem="9C5-hg-9Z1" secondAttribute="trailing" constant="26" id="V9G-QV-8Oa"/>
                             <constraint firstItem="9C5-hg-9Z1" firstAttribute="leading" secondItem="Dsr-86-0Ew" secondAttribute="leading" id="Vjz-A9-1gY"/>
                             <constraint firstItem="Yvr-nw-uUe" firstAttribute="trailing" secondItem="Dsr-86-0Ew" secondAttribute="trailing" constant="20" id="X15-df-CZX"/>
                             <constraint firstItem="fc8-AX-Yjx" firstAttribute="top" secondItem="Yvr-nw-uUe" secondAttribute="top" constant="10" id="bzH-Ep-D3I"/>
-                            <constraint firstItem="YSB-By-zM5" firstAttribute="top" secondItem="fc8-AX-Yjx" secondAttribute="bottom" constant="42" id="cKX-cb-Twp"/>
+                            <constraint firstItem="Dfj-h8-XEc" firstAttribute="top" secondItem="Yvr-nw-uUe" secondAttribute="top" constant="84" id="fBu-JU-KyC"/>
                             <constraint firstItem="Dsr-86-0Ew" firstAttribute="leading" secondItem="Yvr-nw-uUe" secondAttribute="leading" constant="20" id="mJA-0L-k4W"/>
-                            <constraint firstItem="YSB-By-zM5" firstAttribute="leading" secondItem="Yvr-nw-uUe" secondAttribute="leading" constant="20" id="qgz-ls-0Df"/>
+                            <constraint firstItem="cUm-Hy-rml" firstAttribute="top" secondItem="Dfj-h8-XEc" secondAttribute="bottom" constant="8" symbolic="YES" id="yNP-NK-dbf"/>
+                            <constraint firstItem="Dfj-h8-XEc" firstAttribute="leading" secondItem="Yvr-nw-uUe" secondAttribute="leading" constant="20" id="yex-Zd-UJe"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="tUU-AJ-nWA"/>
                     <connections>
                         <outlet property="airportLabel" destination="9C5-hg-9Z1" id="aJs-2r-7OC"/>
-                        <outlet property="defaultRunwayEntryText" destination="AUr-9q-8Vf" id="Nin-qU-7RF"/>
                         <outlet property="icaoTextField" destination="van-p3-s4a" id="LbU-oT-cW0"/>
+                        <outlet property="startingModeSegmentedControl" destination="cUm-Hy-rml" id="hB4-mP-qrb"/>
                         <outlet property="updateSegmentedControl" destination="Dsr-86-0Ew" id="668-U6-Std"/>
                     </connections>
                 </viewController>
